--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,3 +15,4 @@ anyhow = "1.0.66"
 serde_json = "1.0"
 tracing = "0.1"
 tracing-subscriber = { version = "0.3", features = ["env-filter"] }
+secp256k1 = "0.24.1"
